fix alignment of the SingleQuetion alignment

--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+main{
+  min-height: 100vh;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+}
 .container{
-  width:850px;
-  margin: 0 auto;
+  width:90vw;
+  max-width: 920px;
+  margin: 5rem auto;
   background:#ffffff;
   text-align: center;
   margin-top: 3rem;
   border-radius: 5px;
+  display:grid;
+  gap: 1rem 2rem;
+
 }
-.section-title h2{
+h2{
   font-size: 28px;
   margin-bottom: 2rem;
   padding-top:20px;
@@ -28,15 +38,30 @@ code {
   font-family: 'Roboto',sans-serif;
 }
 .singleQuestion{
-  width: 600px;
-  margin: 10px auto;
+  padding:1rem 2.5rem;
   background: #fcfcfc;
   box-shadow: 0 5px 15px rgba(0,0,0, 0.1);
-  display:flex;
-  flex-direction: column;
-
+  margin:20px 30px;
 }
-section{
- display:grid;
- justify-content: space-around;
+.singleQuestion section{
+ display:flex;
+ justify-content: space-between;
+ align-items: center;
+}
+.singleQuestion p{
+ text-align: justify;
+}
+.btn-toggle{
+  border-color:transparent;
+  width:2rem;
+  height: 2rem;
+  display:flex;
+  align-items: center;
+  border-radius: 50%;
+  color:#910858;
+  justify-content: center;
+  cursor: pointer;
+  align-content: center;
+  margin-left:1rem;
+  font-size: 30px;
 }
